--- a/src/components/main.css
+++ b/src/components/main.css
@@ -2,7 +2,8 @@
     --maincolor: #ccc;
     --second-main: #e0e0e0;
     --dark-color: #17181f;
-    --dark-melo: #444;
+    --dark-second: #444;
+    --dark-melo: #4444;
     --purple-melo: #6c72cb;
     --pink-melo: #cb69c1;
     --white-melo: #eeedf0;
@@ -49,7 +50,7 @@
 .show {
     visibility: visible;
     opacity: 1;
-    transition: visibility .3s linear, opacity .3s linear;
+    transition: visibility .5s linear, opacity .5s linear;
 }
 
 .hide {
@@ -135,7 +136,7 @@
 }
 
 .cv:hover {
-    color: var(--dark-melo);
+    color: var(--dark-second);
     border-style: solid;
 }
 
@@ -248,7 +249,67 @@
 /*           */
 /* React styles  */
 .react::before {
-    content: "";
-    width: 45px;
+    content: url('../../public/icons/reactjs-icon.svg');
     position: absolute;
+    top: -15px;
+    transform: rotateX(-90deg);
+    transition: transform .4s linear;
 }
+
+.react:hover::before {
+    transform: rotate(0);
+}
+
+/*           */
+.next::before {
+    content: '';
+    background-image: url('../../public/icons/311px-Nextjs-logo.webp');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    filter: invert() drop-shadow(0px 0px 7px #fff);
+    height: 65px;
+    position: absolute;
+    width: 65px;
+    right: -1px;
+    top: -15px;
+    transform: rotateX(-90deg);
+    transition: transform .4s ease-in-out;
+
+}
+
+.next:hover::before {
+    transform: rotate(0);
+}
+
+
+/* Second section */
+.d-grid {
+    display: grid;
+}
+
+.grid-skills {
+    grid-template-columns: auto auto auto auto;
+    justify-items: center;
+
+}
+
+.skill-section {
+    background-color: var(--dark-melo);
+}
+
+.badge img {
+    width: 50px;
+}
+
+.badge {
+    color: var(--second-main);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+
+
+/*  */
