--- a/src/components/main.css
+++ b/src/components/main.css
@@ -15,7 +15,11 @@
 }
 
 .mt-1 {
-    margin-top: 1rem;
+    margin-top: 1em;
+}
+
+.mb-1 {
+    margin-bottom: 1em;
 }
 
 .p-1 {
@@ -263,11 +267,11 @@
 /*           */
 .next::before {
     content: '';
-    background-image: url('../../public/icons/311px-Nextjs-logo.webp');
+    background-image: url('../../public/icons/next-js-logo-7929BCD36F-seeklogo.com.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
-    filter: invert() drop-shadow(0px 0px 7px #fff);
+    filter: invert() drop-shadow(1px 1px 20px #fff);
     height: 65px;
     position: absolute;
     width: 65px;
@@ -291,7 +295,7 @@
 .grid-skills {
     grid-template-columns: auto auto auto auto;
     justify-items: center;
-
+    row-gap: 3em;
 }
 
 .skill-section {
@@ -307,8 +311,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    row-gap: .6em;
+    width: 100%;
 }
 
+.nextjs img {
+    filter: invert();
+    height: 50px;
+    width: 77px;
+
+}
 
 
 
