--- a/src/components/main.css
+++ b/src/components/main.css
@@ -18,12 +18,32 @@
     margin-top: 1em;
 }
 
+.mt-3 {
+    margin-top: 3em;
+}
+
+.mt-3-5 {
+    margin-top: 3.5em;
+}
+
+.mt-4 {
+    margin-top: 4em;
+}
+
+.mt-5 {
+    margin-top: 5em;
+}
+
 .mb-1 {
     margin-bottom: 1em;
 }
 
 .p-1 {
     padding: 1em;
+}
+
+.p-2 {
+    padding: 2em;
 }
 
 .p-relative {
@@ -73,7 +93,7 @@
 }
 
 .language {
-    top: 5px;
+    top: -30px;
     right: 15px;
     width: 55px;
     justify-content: space-between;
@@ -304,6 +324,22 @@
     transition: transform .4s linear;
 }
 
+.github::after {
+    content: '';
+    background-image: url('../../public/icons/click_arrow.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 120px;
+    height: 120px;
+    filter: invert();
+    position: absolute;
+    top: -113px;
+    left: -50px;
+
+
+}
+
 .github:hover::before {
     transform: rotate(0);
 }
@@ -348,4 +384,44 @@
 /* Third section  */
 .project {
     color: var(--maincolor);
+}
+
+/* Social media */
+.social {
+    background-color: var(--dark-second);
+    margin-bottom: 2em;
+    height: 160px;
+}
+
+.follow {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+/* Instagram styles */
+.instagram svg {
+    transition: filter .5s linear;
+}
+
+.instagram svg {
+    width: 54px;
+    border-radius: 20px;
+    filter: invert();
+}
+
+.instagram svg:hover {
+    filter: invert() drop-shadow(0 0 10px var(--white-melo));
+
+}
+
+/*                   */
+/* Telegram Styles */
+.for-telegram {
+    transition: filter .5s linear;
+}
+
+.for-telegram:hover {
+
+    filter: drop-shadow(0 0 10px #229ED9);
 }
