The project has ended

--- a/src/components/main.css
+++ b/src/components/main.css
@@ -9,6 +9,10 @@
     --white-melo: #eeedf0;
 }
 
+body {
+    background-color: #121212;
+}
+
 /* Utilities */
 .text-center {
     text-align: center;
@@ -44,6 +48,11 @@
 
 .p-2 {
     padding: 2em;
+}
+
+.py-1 {
+    padding-top: 1em;
+    padding-bottom: 1em;
 }
 
 .l-3 {
@@ -97,7 +106,7 @@
 }
 
 .language {
-    top: -30px;
+    top: 10px;
     right: 15px;
     width: 55px;
     justify-content: space-between;
@@ -121,7 +130,7 @@
 
 .toggle-label {
     background: #fff;
-    width: 65px;
+    width: 56px;
     display: inline-block;
     border-radius: 40px;
     padding: 2.5px;
@@ -147,7 +156,7 @@
 
 
 .toggle-span-after {
-    transform: translateX(40px);
+    transform: translateX(30px);
     transition: transform .5s ease-in-out, color .5s ease;
 }
 
@@ -157,9 +166,7 @@
 }
 
 .toggle-label-after {
-    background-color: var(--dark-melo);
-
-
+    background-color: var(--dark-second);
 }
 
 .github-project {
@@ -193,7 +200,6 @@
     text-decoration: none;
     width: 175px;
     height: 40px;
-    gap: 4px;
     color: var(--maincolor);
     border: 1px dashed #444;
     justify-content: center;
@@ -205,6 +211,13 @@
     overflow: hidden;
 }
 
+.btn-span {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
+}
+
+/* 
 .btn>span {
     position: absolute;
     background-color: var(--dark-color);
@@ -226,7 +239,7 @@
         height: 250px;
         opacity: 0;
     }
-}
+} */
 
 .cv {
     transition: all 1s ease;
@@ -464,7 +477,7 @@
 /* Social media */
 .social {
     background-color: var(--dark-melo);
-    margin-bottom: 2em;
+    /* margin-bottom: 2em; */
 }
 
 .follow {
@@ -547,6 +560,26 @@
     filter: drop-shadow(0 0 15px #0a66c2) drop-shadow(0 0 10px #fff) drop-shadow(0 0 5px #0072b1);
 }
 
+/* scroll to top */
+.scroll-to-top {
+    width: 50px;
+    background-color: var(--purple-melo);
+    padding: .4em;
+    height: 50px;
+    position: absolute;
+    right: 20px;
+    bottom: -20px;
+    border-radius: 50%;
+    cursor: pointer;
+    display: none;
+}
+
+.scroll-to-top img {
+    width: 100%;
+    height: 100%;
+    filter: invert();
+}
+
 @media screen and (max-width:768.5px) {
 
     .p-1,
@@ -595,7 +628,8 @@
     .bootstrap::before,
     .javascript::before,
     .react::before,
-    .next::before {
+    .next::before,
+    .github::before {
         all: unset;
     }
 
@@ -650,6 +684,9 @@
     }
 
     @keyframes color {
+        0% {
+            color: var(--maincolor);
+        }
 
         60%,
         100% {
@@ -728,7 +765,7 @@
 
     .for-email:hover,
     .for-github:hover {
-        filter: invert();
+        filter: unset;
     }
 
     .for-email,
@@ -746,6 +783,22 @@
 
         100% {
             filter: invert() drop-shadow(0 0 10px #333) drop-shadow(0 0 5px #f5f5f5) drop-shadow(0 0 5px #fafafa);
+
+        }
+    }
+
+    .light .for-email,
+    .light .for-github {
+        animation: light-color 1s ease-in-out infinite alternate;
+    }
+
+    @keyframes light-color {
+        0% {
+            filter: drop-shadow(0 0 15px #ccc) drop-shadow(0 0 10px #333) drop-shadow(0 0 15px #111);
+        }
+
+        100% {
+            filter: drop-shadow(0 0 10px #ccc) drop-shadow(0 0 5px #333) drop-shadow(0 0 5px #111);
 
         }
     }
@@ -772,6 +825,17 @@
         }
     }
 
+    .switch {
+        display: none;
+    }
+
+    .scroll-to-top {
+        display: block
+    }
+
+    .social {
+        height: 290px;
+    }
 
 }
 
@@ -783,6 +847,21 @@
 
 @media screen and (max-width:425.5px) {
 
+    .javascript,
+    .bootstrap,
+    .react,
+    .next {
+        margin: .2em;
+    }
+
+    .py-1 {
+        padding-top: 2em;
+    }
+
+    .light .github-project {
+        color: var(--dark-color);
+    }
+
     .github,
     .github::after {
         all: unset;
@@ -790,5 +869,10 @@
 
     .mt-3-5 {
         margin: 0;
+    }
+
+
+    .language {
+        top: 10px;
     }
 }
