--- a/src/components/main.css
+++ b/src/components/main.css
@@ -84,17 +84,10 @@ body {
     transition: all .5s ease;
 }
 
-.show {
-    visibility: visible;
-    opacity: 1;
-    transition: visibility .5s linear, opacity .5s linear;
-}
+
 
 .hide {
-    visibility: hidden;
-    height: 0px;
-    opacity: 0;
-    transition: visibility .3s linear, opacity .3s linear;
+    display: none;
 }
 
 
@@ -472,6 +465,7 @@ body {
 /* Third section  */
 .project {
     color: var(--maincolor);
+    text-align: center;
 }
 
 /* Social media */
@@ -527,15 +521,12 @@ body {
 }
 
 /*                   */
-
-.for-github,
 .for-email {
     filter: invert();
     transition: filter .5s linear;
 }
 
-.for-email:hover,
-.for-github:hover {
+.for-email:hover {
     filter: invert() drop-shadow(0 0 15px #333) drop-shadow(0 0 5px #f5f5f5) drop-shadow(0 0 10px #fafafa);
 }
 
@@ -775,15 +766,12 @@ body {
 
     }
 
-    .for-email:hover,
-    .for-github:hover {
+    .for-email:hover {
         filter: unset;
     }
 
     .for-email,
-    .for-email:active,
-    .for-github:active,
-    .for-github {
+    .for-email:active {
         animation: fourth-color 1s ease-in-out infinite alternate;
     }
 
@@ -799,8 +787,7 @@ body {
         }
     }
 
-    .light .for-email,
-    .light .for-github {
+    .light .for-email {
         animation: light-color 1s ease-in-out infinite alternate;
     }
 
